fixed: content of Leon

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
       content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no"
     />
     <link href="images/logo.jpg" rel="icon" />
-    <title>Sai Chang</title>
+    <title>Leon Meyer</title>
     <meta
       name="description"
-      content="Sai Chang Personal Website - Professional Software Engineer"
+      content="Leon Meyer Personal Website - Professional Software Engineer"
     />
 
     <!-- Web Fonts -->
@@ -95,17 +95,17 @@
                       src="images/web-developer-sm.jpg"
                       width="200px"
                       height="200px"
-                      title="I'm Sai"
+                      title="I'm Leon"
                       alt=""
                     />
                   </div>
                   <h2
                     class="text-10 text-white text-uppercase fw-600 mb-4 wow fadeInUp"
                   >
-                    Hello! I'm Sai Chang - Professional Web Software Engineer.
+                    Hello! I'm Leon Chang - Professional Web Software Engineer.
                   </h2>
                   <p class="text-5 text-light pb-3 wow fadeInUp">
-                    Based in Lakeland, Florida, USA
+                    Based in Dusseldorf, Germany
                   </p>
                   <a
                     href="#about"
@@ -144,9 +144,9 @@
                   font-size: 22px;
                 "
                 href="index.html"
-                title="Callum"
+                title="Leon Meyer"
               >
-                <span>Sai Chang</span>
+                <span>Leon Meyer</span>
               </a>
               <!-- Logo End -->
             </div>
@@ -201,7 +201,7 @@
                 <li class="social-icons-linkedin">
                   <a
                     data-bs-toggle="tooltip"
-                    href="https://www.linkedin.com/in/sai-chang"
+                    href="https://www.linkedin.com/in/leon-meyer"
                     target="_blank"
                     title=""
                     data-bs-original-title="Linkedin"
@@ -215,7 +215,7 @@
                 <li class="social-icons-google">
                   <a
                     data-bs-toggle="tooltip"
-                    href="mailto:thisissaichang@gmail.com"
+                    href="mailto:whoisleonmeyer@gmail.com"
                     target="_blank"
                     title=""
                     data-bs-original-title="Google"
@@ -274,7 +274,7 @@
                 <h2 class="text-8 fw-400 mb-3">
                   Hi, I'm
                   <span class="fw-700 border-bottom border-3 border-primary">
-                    Sai Chang
+                    Leon Meyer
                   </span>
                   <span
                     class="iconify"
@@ -925,7 +925,7 @@
                   <img src="./images/university.png" width="80px" height="80px" />
                   <div class="border-start border-2 border-primary ms-4 ps-3">
                     <h3 class="text-5">Bachelor's Degree in Computer Science</h3>
-                    <p class="mb-2">Beacon College / 2009 - 2014</p>
+                    <p class="mb-2">Vienna University of Technology / 2009 - 2014</p>
                     <ul class="text-muted text-2">
                       <li class="text-muted mb-1">
                         Studied ML(machine learning), AI(artificial intelligence), web development area
@@ -945,47 +945,53 @@
                 <h2 class="text-7 fw-600 mb-4 pb-2">My Experience</h2>
                 <div class="border-start border-2 border-primary ps-3">
                   <div class="d-flex">
-                    <img src="./images/create.png" width="80px" height="80px" />
+                    <img src="./images/result_id.jpg" width="80px" height="80px" />
                     <div class="ps-4">
                       <h3 class="text-5">Front-End Developer</h3>
-                      <p class="mb-2"><strong>Create.xyz</strong> / Mar 2019 - Current</p>
+                      <p class="mb-2"><strong>ResultID</strong> / Oct 2020 - Current</p>
                       <ul class="text-muted text-2">
-                        <li class="mb-1">Built PWA for machine marketing SAAS platform using React, TypeScript, GraphQL, MUI and Node.js, PostgreSQL.</li>
-                        <li class="mb-1">Lead the front-end team, collaborated with managers & stakeholders to achieve business objectives in the application.</li>
-                        <li class="mb-1">Integrated Mixpanel to analyze users' activities on our platform.</li>
-                        <li class="mb-1">Reduced the complexity of component management by 30% using Storybook and managed atomic UI components in Storybook.</li>
-                        <li class="mb-1">Worked directly with the design team to produce pixel-perfect, responsive pages.</li>
-                        <li class="mb-1">Covered 60% of automation testing following TDD principle.</li>
-                        <li class="mb-1">Used Technologies: React, React Hook, React Native, Next.js, TypeScript, Node.js, GraphQL, MUI, Tailwind CSS, Storybook, Mixpanel, React Testing Library, Jest, Cypress, PostgreSQL, Redis, Docker, AWS, Git, JIRA.</li>
+                        <li class="mb-1">Built an AI-Driven platform to summarize market data using React, React Native, Next.js, Vue.js, TypeScript, Node.js and PostgreSQL.</li>
+                        <li class="mb-1">Lead the front-end team, collaborated with the PM to achieve business objectives in the application.</li>
+                        <li class="mb-1">Took full ownership of the admin portal of the application built using React, Next.js, Python, FastAPI.</li>
+                        <li class="mb-1">Implemented micro-frontend pattern and managed collection of sample components using Storybook.</li>
+                        <li class="mb-1">Integrated GraphQL & RESTful APIs to the front-end application.</li>
+                        <li class="mb-1">Integrated 3rd party libraries like OAuth, Mixpanel and Chart.js.</li>
+                        <li class="mb-1">Worked directly with the design team to translate Figma design into pixel-perfect and responsive pages.</li>
+                        <li class="mb-1">Strongly experienced in daily peer code review and feature review on the product road map.</li>
+                        <li class="mb-1">Conducted automation testing using Jest, React Testing Library, Cypress and increased test coverage up to 50%.</li>
+                        <li class="mb-1">Used skills: HTML/CSS, JavaScript, TypeScript, Python, React, React Native, Next.js, Vue.js, Node.js, FastAPI, Storybook, OAuth, Chart.js, Jest, React Testing Library, Cypress, PostgreSQL, Docker, AWS,
+Jira, Slack, Git.</li>
                       </ul>
                     </div>
                   </div>
                   <div class="d-flex">
-                    <img src="./images/webflow.png" width="80px" height="80px" />
+                    <img src="./images/outrider.png" width="80px" height="80px" />
                     <div class="ps-4">
                       <h3 class="text-5">Full-Stack Developer</h3>
-                      <p class="mb-2"><strong>Webflow</strong> / Oct 2017 - Mar 2019</p>
+                      <p class="mb-2"><strong>Outrider</strong> / Nov 2017 - Sept 2020</p>
                       <ul class="text-muted text-2">
-                        <li class="mb-1">Built and extended new feature to design extension app of Webflow platform using React, Angular, Node.js, Django.</li>
-                        <li class="mb-1">Built scalable APIs using Node.js and Python to fetch application record details; secured APIs through OAuth.</li>
-                        <li class="mb-1">Worked with high-load systems (more than 100, 000 daily users) optimizing performance and managed state using Flux.</li>
-                        <li class="mb-1">Maintained back-end code built using Node.js, PostgreSQL collaborated with product team to implement new features and collaborated with product team to implement new features.</li>
-                        <li class="mb-1">Converted Figma design into pixel-perfect and responsive pages using Styled Component and MUI.</li>
-                        <li class="mb-1">HTML, CSS, JavaScript, TypeScript, Python, Styled Component, Bootstrap, MUI, React, Next.js, Flux, Python, Django, Express.js, PostgreSQL, MongoDB, AWS, Docker, Nginx, Slack, Jira, GitHub.</li>
+                        <li class="mb-1">Built yard operation management platform using React, Next.js, GraphQL, Node.js, Express.js, Python, MySQL, Docker and AWS.</li>
+                        <li class="mb-1">Implemented real-time communication between yards and the server using GraphQL subscription.</li>
+                        <li class="mb-1">Contributed to building robust & scalable back-end GraphQL APIs.</li>
+                        <li class="mb-1">Maintained back-end code using Node.js/Express.js and Python/Django and collaborated with the product team to expand new features.</li>
+                        <li class="mb-1">Contributed to the in-house UI library to create reusable React components that saved over 20 hours of development time per week.</li>
+                        <li class="mb-1">Used skills: HTML/CSS, JavaScript, Python, React, Next.js, Node.js, Express.js, Django, MySQL, Docker, AWS, GitHub, Jira, Slack.</li>
                       </ul>
                     </div>
                   </div>
                   <div class="d-flex">
-                    <img src="./images/net-tech.png" width="80px" height="80px" />
+                    <img src="./images/voypost.jpg" width="80px" height="80px" />
                     <div class="ps-4">
                       <h3 class="text-5">Web Developer</h3>
-                      <p class="mb-2"><strong>NetTech</strong> / Feb 2015 - Aug 2017</p>
+                      <p class="mb-2"><strong>Voypost</strong> / Feb 2015 - Aug 2017</p>
                       <ul class="text-muted text-2">
-                        <li class="mb-1">Worked in agile team to migrate legacy e-Commerce PHP / Laravel project to React / Node / MongoDB stack.</li>
-                        <li class="mb-1">Migrated old codebase with jQuery to React to improve performance.</li>
-                        <li class="mb-1">Translated Figma designs into responsive & pixel-perfect pages using React.</li>
-                        <li class="mb-1">Had peer code reviews to improve code quality and follow best practices.</li>
-                        <li class="mb-1">Used technologies: HTML, CSS, JavaScript, TypeScript, Bootstrap, jQuery, PHP, Laravel, React, Node.js, Express.js, MySQL, MongoDB, Figma, Docker, GitHub, Jira, Slack.</li>
+                        <li class="mb-1">Fixed bugs from existing websites and implemented enhancements that significantly improved functionality and speed using JavaScript, Angular, PHP and Laravel.</li>
+                        <li class="mb-1">Helped many startups to successfully launch their MVPs.</li>
+                        <li class="mb-1">Developed user-friendly website, including optimized check-out page that increased user clicks, and subsequently customer purchased by 20% using Angular.</li>
+                        <li class="mb-1">Migrated legacy jQuery code to Angular version.</li>
+                        <li class="mb-1">Built semantic HTML pages using various CSS frameworks like Bootstrap, Material UI.</li>
+                        <li class="mb-1">Mocked static web pages using HTML, CSS, jQuery and React.</li>
+                        <li class="mb-1">Used skills: HTML/CSS, JavaScript, PHP, jQuery, Angular, Laravel, Bootstrap, Material UI, Docker, AWS, Git, Jira, Slack, Figma, Photoshop.</li>
                       </ul>
                     </div>
                   </div>
@@ -1369,7 +1375,7 @@
                 </p>
                 <h3 class="text-5 fw-600">Living In:</h3>
                 <address class="text-4">
-                  3733 Palm Rd. Lakeland, Florida
+                  Ziehrerstraße 9, Dusseldorf, Germany
                 </address>
                   <ul class="social-icons">
                     <li class="social-icons-github">
@@ -1390,7 +1396,7 @@
                     <li class="social-icons-linkedin">
                       <a
                         data-bs-toggle="tooltip"
-                        href="https://www.linkedin.com/in/sai-chang"
+                        href="https://www.linkedin.com/in/leon-meyer"
                         target="_blank"
                         title=""
                         data-bs-original-title="Linkedin"
@@ -1399,7 +1405,7 @@
                     <li class="social-icons-google">
                       <a
                         data-bs-toggle="tooltip"
-                        href="mailto:thisissaichang@gmail.com"
+                        href="mailto:whoisleonmeyer@gmail.com"
                         target="_blank"
                         title=""
                         data-bs-original-title="Google"
@@ -1439,7 +1445,7 @@
           <div class="row">
             <div class="col-lg-6 text-center text-lg-start wow fadeInUp">
               <p class="mb-2 mb-lg-0">
-                Sai Chang
+                Leon Meyer
               </p>
             </div>
             <div class="col-lg-6 wow fadeInUp">
